--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ img {
     left: 5%;
     max-width: 60%;
     display: inline;
+    padding-right: 2%;
 }
 
 .inline {
@@ -153,5 +154,12 @@ input {
 
 #navbar {
 	float: right;
-	width: 10%;
+	width: 15%;
+}
+#returnhome {
+    font-size: xxx-large;
+    display: inline;
+}
+h1 {
+    display: inline;
 }
